Add new buttons and images for home and info icons.

--- a/docs/_sass/jekyll-theme-hacker.scss
+++ b/docs/_sass/jekyll-theme-hacker.scss
@@ -240,6 +240,21 @@ hr {
   background: url("../images/blacktocat.png") 0 0 no-repeat;
 }
 
+.btn-home .icon {
+  opacity: 0.6;
+  background: url("../images/home.png") 0 0 no-repeat;
+}
+
+.btn-homehalo .icon {
+  opacity: 0.6;
+  background: url("../images/homehalo.png") 0 0 no-repeat;
+}
+
+.btn-info .icon {
+  opacity: 0.6;
+  background: url("../images/info.png") 0 0 no-repeat;
+}
+
 /* Links
    a, a:hover, a:visited
 */
