--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -25,6 +25,7 @@
             <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
           {% endif %}
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="{{ '/about' | relative_url }}" class="btn btn-info"><span class="icon"></span>About</a>
         </section>
       </div>
     </header>
