--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,9 +1,10 @@
 ---
 layout: default
+excerpt_separator: <!--endexcerpt-->
 ---
 
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
-<h1>{{ page.title }}</h1>
+<small>{{ page.date | date_to_rfc822 }}</small>
+<h3>{{ page.title }}</h3>
 
 <p class="view">by {{ page.author | default: site.author }}</p>
 
