--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,12 +1,14 @@
 ---
 layout: default
-excerpt_separator: <!--endexcerpt-->
+excerpt_separator: <!--more-->
 ---
 
 <small>{{ page.date | date_to_rfc822 }}</small>
 <h3>{{ page.title }}</h3>
 
+{% comment %}
 <p class="view">by {{ page.author | default: site.author }}</p>
+{% endcomment %}
 
 {{content}}
 
