Add formatting for code and generic keywords.

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -22,9 +22,9 @@ excerpt_separator: <!--more-->
     <li><small><span>|</span></small></li>
     <li><small><span class="codepath">this/is/a/code/file/path</span></small></li>
     <li><small><span>|</span></small></li>
-    <li><small><span><em><code>this is a code keyword</code></em></span></small></li>
+    <li><small><span class="ckw">this is a code keyword</span></small></li>
     <li><small><span>|</span></small></li>
-    <li><small><span id="gkw"><em>this is a generic keyword</em></span></small></li>
+    <li><small><span class="gkw">this is a generic keyword</span></small></li>
 </ul>
 
 {% comment %}
