--- a/docs/_sass/jekyll-theme-hacker.scss
+++ b/docs/_sass/jekyll-theme-hacker.scss
@@ -367,6 +367,20 @@ a {
   font-size: 11px;
 }
 
+.postimgs {
+  border: 1px solid #ddd;
+  border-left: 3px solid #00FF7F;
+  border-radius: 4px; 
+  /*padding: 5px;*/
+  margin-top: 1em;
+  margin-bottom: 1em;
+  width: 75%;
+  padding: 0.5em 0.5em;
+}
+
+.postimgs:hover, .codesnip:hover, .codepath:hover, .ckw:hover, .gkw:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
 /* 
 CONTENT KEYWORD FORMATTING LEGEND:
 
