--- a/docs/_sass/jekyll-theme-hacker.scss
+++ b/docs/_sass/jekyll-theme-hacker.scss
@@ -333,7 +333,6 @@ a {
   background-color: black;
   color: #666;
   font-family: monospace;
-  line-height: 1.6;
   font-style: italic;
 }
 
@@ -342,29 +341,26 @@ a {
 }
 
 .texgend {
-  list-style: none;
-  font-size: 13px;
+  font-size: small;
 }
 
-.texgend li {
-  list-style: none;
-  line-height: unset;
+.texgend tr {
   float: left; 
-  margin-right: 10px;
   max-width: 100%;
 }
 
+.texgend td + td {
+  border-left: 2px solid white;
+}
+
 .texgend .ckw {
-  background-color: black;
-  color: #666;
-  font-family: monospace;
-  line-height: 1.6;
+  font-size: 13px;
 }
 
 .texgend .codesnip {
-  margin-top: -5px;
+  margin-top: -1px;
   margin-bottom: unset;
-  font-size: 11px;
+  font-size: small;
 }
 
 .postimgs {
