Add full content to the post.

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -13,6 +13,8 @@ excerpt_separator: <!--more-->
 
 {{ content }}
 
+<img class="signoffpenguin" src="{{ '/assets/images/penguin.png' }}" alt='penguin'><br>
+
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
