--- a/docs/_sass/jekyll-theme-hacker.scss
+++ b/docs/_sass/jekyll-theme-hacker.scss
@@ -367,8 +367,7 @@ a {
   border: 1px solid #ddd;
   border-left: 3px solid #00FF7F;
   border-radius: 4px; 
-  /*padding: 5px;*/
-  margin-top: 1em;
+  /*padding: 5px;*/ margin-top: 1em;
   margin-bottom: 1em;
   width: 75%;
   padding: 0.5em 0.5em;
@@ -406,6 +405,23 @@ a {
 
 li#lit {
   list-style-image: none;
+}
+
+.blink {
+  //font-size: 13px;
+  color: $conifer;
+  animation: blinker 3s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 25%;
+  }
+}
+
+.blink a#bl {
+  //font-size: 16px;
+  font-weight: bold;
 }
 
 /* 
