--- a/docs/_sass/jekyll-theme-hacker.scss
+++ b/docs/_sass/jekyll-theme-hacker.scss
@@ -319,7 +319,7 @@ a {
 }
 
 .codepath {
-  background: #f4f4f4;
+  background: #2F4F4F;
   border: 1px solid #ddd;
   color: #666;
   page-break-inside: avoid;
