change path color

--- a/docs/_sass/jekyll-theme-hacker.scss
+++ b/docs/_sass/jekyll-theme-hacker.scss
@@ -321,7 +321,7 @@ a {
 .codepath {
   background: #2F4F4F;
   border: 1px solid #ddd;
-  color: #666;
+  color: #FFF8DC;
   page-break-inside: avoid;
   font-family: monospace;
   overflow: auto;
